changed iList to Ienumerable

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":  "server=codeboxx.cq6zrczewpu2.us-east-1.rds.amazonaws.com;database=louis_felix_beland;user=codeboxx;password=Codeboxx1!;"
+    "DefaultConnection":  "server=localhost;database=app_development;user=root;password=Louis123~;"
   },
   "AllowedHosts": "*"
 }
